# ttk-text

./: CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README_pypi.md  SECURITY.md  SECURITY.zh-CN.md  example.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
src/ttk_text/: __init__.py  scrolled_text.py  utils.py
tests/integration/: test_ttk_text.py
tests/unit/: test_utils.py
