[project]
name = "ttk-text"
version = "0.3.0"
description = "Themed Tkinter Text widget with modern styling support."
authors = [{ name = "Jesse205", email = "jesse205@qq.com" }]
maintainers = [{ name = "Jesse205", email = "jesse205@qq.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README_pypi.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ttk", "ttk-text", "tkinter", "tkinter-text", "tk", "tk-text"]

[project.urls]
Repository = "https://github.com/hellotool/ttk-text"
Tracker = "https://github.com/hellotool/ttk-text/issues"
Changelog = "https://github.com/hellotool/ttk-text/releases"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "example" },
]
test = ["pytest>=8.3.4"]
example = ["sv-ttk>=2.6.0"]
lint = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 120
extend-exclude = ["external-themes/**"]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
