[project]
name = "ttk-text"
version = "0.3.1"
description = "Themed Tkinter Text widget with modern styling support."
authors = [{ name = "Jesse205", email = "jesse205@qq.com" }]
maintainers = [{ name = "Jesse205", email = "jesse205@qq.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README_pypi.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
]
keywords = ["ttk", "ttk-text", "tkinter", "tkinter-text", "tk", "tk-text"]
import-names = ["ttk_text"]

[project.urls]
Repository = "https://github.com/hellotool/ttk-text"
Tracker = "https://github.com/hellotool/ttk-text/issues"
Changelog = "https://github.com/hellotool/ttk-text/releases"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "example" },
]
test = ["pytest>=8.3.4"]
example = ["sv-ttk>=2.6.0"]
lint = ["pyright>=1.1.407", "ruff>=0.14.10"]

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.10.1"

[tool.ruff]
line-length = 120
extend-exclude = ["external-themes/**"]

[tool.ruff.lint]
ignore = [
    "ANN401",  # Any is sometimes unavoidable due to the lack of generics
    "D100",    # Documentation is not always required
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "FA100",   # No documentation found explaining this behavior
    "PLC0415", # Imports need to be placed inside functions to prevent compatibility issues or unnecessary code execution
    "FBT001",  # Named arguments are not required when setting a single value
    "FBT003",
    "ICN001",  # Abbreviations often have ambiguous semantics and should be avoided whenever possible
    "PLR0913", # Having many arguments is not a problem; the problem is having many arguments without using named arguments
    "PLR2004", # Sometimes, simple length checks or common status codes do not require constants
    "ANN003",  # Cannot be enforced
    "ANN202",
    "ANN204",
    "COM812",  # May conflict with the formatter
    "TRY003",  # Not necessary
    "EM101",
    "EM102",
]
select = ["ALL"]
exclude = ["tests/**"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
